# project-wraeclast

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
api/: __init__.py  build_diff.py  craft.py  craft_alerts.py  craft_ev.py  graph.py  index.py  main.py  price_history.py  prices.py  rag.py
cloudflare/: README.md  worker.js  wrangler.toml
collector/: __init__.py  add_knowledge.py  community_scraper.py  config.py  craft_guides.py  curate.py  ggg_client.py  guides.py  http.py  ingest.py  json_salvage.py  llm.py  ninja_build_client.py  ninja_client.py  ninja_meta_client.py  pob_parser.py  query_stats.py  rss_client.py  run_daily.py  seed_craft_methods.py  seed_knowledge.py  source_refs.py  topics.py  youtube_client.py
db/: __init__.py  connection.py  models.py  repo.py
docs/: FASE_0_COMANDOS.md  POE2_AGENT_SPEC.md
reports/: 2026-06-18-wraeclast-Runes of Aldur.md  2026-06-19-wraeclast-Runes of Aldur.md  2026-06-20-insight-Runes of Aldur.md  2026-06-20-wraeclast-Runes of Aldur.md  2026-06-21-insight-Runes of Aldur.md  2026-06-21-wraeclast-Runes of Aldur.md  2026-06-22-insight-Runes of Aldur.md  2026-06-22-wraeclast-Runes of Aldur.md  2026-06-23-wraeclast-Runes of Aldur.md  2026-06-24-wraeclast-Runes of Aldur.md  2026-06-25-wraeclast-Runes of Aldur.md  2026-06-26-wraeclast-Runes of Aldur.md  2026-06-27-wraeclast-Runes of Aldur.md  2026-06-28-wraeclast-Runes of Aldur.md  2026-06-29-wraeclast-Runes of Aldur.md  2026-06-30-wraeclast-Runes of Aldur.md  2026-07-01-wraeclast-Runes of Aldur.md  (+41 more)
routines/: daily_curation.md  (+1 more)
(+79 files in other folders)
