[project]
name = "project-wraeclast"
version = "0.1.0"
description = "Auto-updating Path of Exile 2 advisor: economy, build diff, farm profit/hour, RAG chat."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Leonardo (souzxxx)" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "psycopg[binary]>=3.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["collector", "db", "api", "api.routes"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
